--- a/home.html
+++ b/home.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Add this to your HTML file -->
+<div id="clock"></div>
+<input type="date" id="calendar">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
@@ -10,7 +14,7 @@
 <body>
     <header>
         <h1>Welcome to the WDML Advertising Project Dashboard</h1>
-        <p>Board Project.</p>
+        <p>Board Project</p>
     </header>
     <nav>
         <button onclick="location.href='progress.html'">Projects Progress</button>
