--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
     <header>
         <h1>Welcome to the WDML Advertising Project Dashboard</h1>
         <p>Board Project</p>
+        <div id="clock"></div> <input type="date" id="calendar">
     </header>
     <nav>
         <button onclick="location.href='progress.html'">Projects Progress</button>
