--- a/home.html
+++ b/home.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Digital Clock and Calendar</title>
+    <link rel="stylesheet" href="styles.css"> <script src="scripts.js" defer>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,6 +29,6 @@
         <img src="./assets/banner.jpg"  alt="Sample Image" style="max-width: 100%; height: auto;" >
 
     </div>
-      <div id="clock"></div> <input type="date" id="calendar">
+  
 </body>
 </html>
