--- a/home.html
+++ b/home.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
@@ -12,8 +10,7 @@
 <body>
     <header>
         <h1>Welcome to the WDML Advertising Project Dashboard</h1>
-        <p>Board Project</p>
-       
+        <p>Board Project.</p>
     </header>
     <nav>
         <button onclick="location.href='progress.html'">Projects Progress</button>
@@ -21,11 +18,9 @@
         <button onclick="location.href='stock.html'">Stock Sheet</button>
     </nav>
     <script src="scripts.js"></script>
-  
     <div>
         <img src="./assets/banner.jpg"  alt="Sample Image" style="max-width: 100%; height: auto;" >
 
     </div>
-  
 </body>
 </html>
