--- a/home.html
+++ b/home.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Clock and Calendar</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
+</head>
+<body>
+    <div id="clock"></div>
+    <input type="date" id="calendar">
+</body>
+</html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
