--- a/home.html
+++ b/home.html
@@ -11,6 +11,9 @@
     <title>Digital Clock and Calendar</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
+  
+    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Digital Clock</title> <link rel="stylesheet" href="styles.css"> <script src="scripts.js" defer></script>
     
 </head>
 <body>
@@ -26,6 +29,8 @@
     <script src="scripts.js"></script>
     <div>
         <img src="./assets/banner.jpg"  alt="Sample Image" style="max-width: 100%; height: auto;" >
+        <div id="clock"></div>
+        <div id="clock"></div> <input type="date" id="calendar">
 
     </div>
        <div id="clock"></div>
