--- a/timeline.html
+++ b/timeline.html
@@ -51,10 +51,13 @@
         <div class="milestone">
             <div class="milestone-details">
                 <h3>Job Requested</h3>
-                <h4>01.Kekirawa New Lab Open 2024-12-25 </h4>
+                 <h4>01.GET TOGETHER TROPHY 2024-12-13 </h4>
+                <small>All Trophy Sizes - 4  QTY - 90 (10x4)</small>
+                <p></p><small>Final Date: 2024-12-10</small>
+                <h4>02.Kekirawa New Lab Open 2024-12-25 </h4>
                 <small>Main Board(16.5x4),Top Side Board (8x8),Side Sign (10x4)</small>
                 <p></p><small>Final Date: 2024-12-20</small>
-                <h4>02.Hettipola New Lab Open 2024-12-? </h4>
+                <h4>03.Hettipola New Lab Open 2024-12-? </h4>
                 <small>Main Board(10x4),Top Side Board (8x6)</small>
                 <p></p><small>Final Date: 2024-12-?</small>
             </div>
@@ -64,10 +67,13 @@
         <div class="milestone">
             <div class="milestone-details">
                 <h3>Job Confirmed</h3>
-                <h4>01. Kekirawa  - Pending....</h4>
+                 <h4>01.Gettogether Trophy</h4>
+                <p>Sample Trophy Submitted</p>
+                <small>Date: 2024-12-22</small>
+                <h4>02. Kekirawa  - Pending....</h4>
                 <p></p>
                 <small>Date: 2024-12-26</small>
-                <h4>01. Hettipola  - Pending....</h4>
+                <h4>03. Hettipola  - Pending....</h4>
                 <p>Artwork Complete  but not Recived Conformation</p>
                 <small>Date: 2024-12-26</small>
             </div>
@@ -76,6 +82,9 @@
         <div class="milestone">
             <div class="milestone-details">
                 <h3>Material Received</h3>
+                 <h4>01.Gettogether Trophy</h4>
+                <p>Sample Trophy Submitted</p>
+                <p>Material Not Received</p>
                 <p>All necessary materials and resources acquired</p>
                 <small>Date: 2024-12-26</small>
             </div>
