--- a/progress.html
+++ b/progress.html
@@ -57,6 +57,12 @@
             </tr>
         </thead>
         <tbody>
+              <tr>
+                <td>Gettogethr Trophy</td>
+                <td>Confirma</td>
+                <td>No Material</td>
+                <td>2024-12-10</td>
+            </tr>
             <tr>
                 <td>Kekirawa Lab</td>
                 <td>No Confirmation</td>
