--- a/timeline.html
+++ b/timeline.html
@@ -52,7 +52,7 @@
             <div class="milestone-details">
                 <h3>Job Requested</h3>
                  <h4>01.GET TOGETHER TROPHY 2024-12-13 </h4>
-                <small>All Trophy Sizes - 4  QTY - 90 (10x4)</small>
+                <small>All Trophy Sizes - 4  QTY - 90 </small>
                 <p></p><small>Final Date: 2024-12-10</small>
                 <h4>02.Kekirawa New Lab Open 2024-12-25 </h4>
                 <small>Main Board(16.5x4),Top Side Board (8x8),Side Sign (10x4)</small>
