--- a/progress.html
+++ b/progress.html
@@ -59,7 +59,7 @@
         <tbody>
               <tr>
                 <td>Gettogethr Trophy</td>
-                <td>Confirma</td>
+                <td>Confirm</td>
                 <td>No Material</td>
                 <td>2024-12-10</td>
             </tr>
