--- a/progress.html
+++ b/progress.html
@@ -77,6 +77,35 @@
             </tr>
         </tbody>
     </table>
+    <h1>Complete Projects</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Status</th>
+                <th>Requested By</th>
+            </tr>
+        </thead>
+        <tbody>
+              <tr>
+                <td>4x2 Double side Stand Board</td>
+                <td>Completed (9Qty)</td>
+                <td>Dambulla</td>
+            </tr>
+            <tr>
+                <td>4x2 Double side Stand Board</td>
+                <td>Completed (4Qty)</td>
+                <td>Galewela</td>
+            </tr>
+            <tr>
+                <td>Hettipola Lab</td>
+   		<td>No Confirmation</td>
+                <td>2024-11-25</td>
+                <td>2024-12-08</td>
+            </tr>
+        </tbody>
+    </table>
+
 
 
     <canvas id="progressChart"></canvas>
