--- a/progress.html
+++ b/progress.html
@@ -83,6 +83,7 @@
             <tr>
                 <th>Project Name</th>
                 <th>Status</th>
+                <th>Discriptin</th>
                 <th>Requested By</th>
             </tr>
         </thead>
@@ -90,18 +91,20 @@
               <tr>
                 <td>4x2 Double side Stand Board</td>
                 <td>Completed (9Qty)</td>
+                 <td></td>
                 <td>Dambulla</td>
             </tr>
             <tr>
                 <td>4x2 Double side Stand Board</td>
                 <td>Completed (4Qty)</td>
+                <td></td>
                 <td>Galewela</td>
             </tr>
             <tr>
-                <td>Hettipola Lab</td>
-   		<td>No Confirmation</td>
-                <td>2024-11-25</td>
-                <td>2024-12-08</td>
+                <td>4x2 Double side Stand Board</td>
+   		     <td>Completed (5Qty)</td>
+                <td>F Pols Included</td>
+                <td>Kurunegala</td>
             </tr>
         </tbody>
     </table>
