--- a/progress.html
+++ b/progress.html
@@ -12,7 +12,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-           color: #a2bb00;
+           color: #01959a;
         }
         table {
             width: 100%;
