--- a/progress.html
+++ b/progress.html
@@ -122,7 +122,7 @@
                 labels: ['Completed', 'In Progress', 'Pending'],
                 datasets: [{
                     data: [30, 50, 20],
-                    backgroundColor: ['green', 'blue', 'orange']
+                    backgroundColor: ['#40E0D0', '#6495ED', '#FFBF00']
                 }]
             }
         });
