--- a/progress.html
+++ b/progress.html
@@ -7,12 +7,13 @@
 <meta charset="UTF-8">
     <title>Pending Projects</title>
     <style>
+        
         body {
             font-family: Arial, sans-serif;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-           color: #01959a;
+           color: #660b4f;
         }
         table {
             width: 100%;
@@ -80,6 +81,7 @@
             </tr>
         </tbody>
     </table>
+  
     <h1>Complete Projects</h1>
     <table>
         <thead>
