--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,13 @@
             color: white;
             margin-top: 20px;
         }
+         }
+        .back-button {
+            display: block;
+            margin: 20px 0;
+            text-decoration: none;
+            color: #4CAF50;
+        }
     </style>
 </head>
 <body>
