--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
         <button onclick="location.href='progress.html'">Projects Progress</button>
         <button onclick="location.href='timeline.html'">Progress Timeline</button>
         <button onclick="location.href='stock.html'">Stock Sheet</button>
+        <button onclick="location.href='structure.html'">Planing</button>
           <button onclick="location.href='gallery.html'">Gallery</button>
     </nav>
     <script src="scripts.js"></script>
