--- a/structure.html
+++ b/structure.html
@@ -77,12 +77,12 @@
             <img src="./assets/hettipola.jpg" alt="Blueprint 1">
             <button class="print-button" onclick="printImage('blueprints/blueprint1.jpg')">Print</button>
         </div>
-         <!--
+       
         <div class="blueprint">
-            <img src="blueprints/blueprint2.jpg" alt="Blueprint 2">
+            <img src="./assets/Kekirawa Main lab.jpg" alt="Blueprint 2">
             <button class="print-button" onclick="printImage('blueprints/blueprint2.jpg')">Print</button>
         </div>
-        <div class="blueprint">
+         <!-- <div class="blueprint">
             <img src="blueprints/blueprint3.jpg" alt="Blueprint 3">
             <button class="print-button" onclick="printImage('blueprints/blueprint3.jpg')">Print</button>
         </div>
