--- a/structure.html
+++ b/structure.html
@@ -53,7 +53,7 @@
                     <title>Print Blueprint</title>
                 </head>
                 <body style="margin: 0; padding: 0; text-align: center;">
-                    <img src="${src}" style="width: 100%; height: auto;">
+                    <img src="${src}" style="width: auto; height: auto;">
                 </body>
                 </html>
             `);
