--- a/structure.html
+++ b/structure.html
@@ -107,6 +107,7 @@
                 <button class="action-button" onclick="printImage('./assets/Kekirawa Main lab.jpg')">Print</button>
                 <button class="action-button maximize-button" onclick="openModal('./assets/Kekirawa Main lab.jpg')">Maximize</button>
             </div>
+             <p>Kekirawa Board</p>
         </div>
     </div>
 
