--- a/home.html
+++ b/home.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
-        <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Clock and Calendar</title>
-    <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
-  
-
-    
 </head>
 <body>
     <header>
@@ -24,16 +16,13 @@
         <button onclick="location.href='progress.html'">Projects Progress</button>
         <button onclick="location.href='timeline.html'">Progress Timeline</button>
         <button onclick="location.href='stock.html'">Stock Sheet</button>
-        <button onclick="location.href='structure.html'">Planing</button>
-          <button onclick="location.href='gallery.html'">Gallery</button>
+        <button onclick="location.href='structure.html'">Planning</button>
+        <button onclick="location.href='gallery.html'">Gallery</button>
     </nav>
-    <script src="scripts.js"></script>
-    <div>
-        <img src="./assets/banner.jpg"  alt="Sample Image" style="max-width: 100%; height: auto;" >
+    <div class="content">
+        <img src="./assets/banner.jpg" alt="Sample Image" class="responsive-image">
         <div id="clock"></div>
-        <div id="clock"></div> <input type="date" id="calendar">
-
+        <input type="date" id="calendar">
     </div>
- 
 </body>
 </html>
