--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <button onclick="location.href='gallery.html'">Gallery</button>
     </nav>
     <div class="content">
-        <img src="./assets/banner.jpg" alt="Sample Image" class="responsive-image">
+        <img src="./assets/banner.jpg" alt="Sample Image" style="max-width: 100%; height: auto;" >
         <div id="clock"></div>
         <input type="date" id="calendar">
     </div>
