--- a/timeline.html
+++ b/timeline.html
@@ -44,16 +44,29 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-button">← Back to Home</a>
-    <h1>Project Timeline</h1>
+       <div class="timeline">
+        <div class="milestone">
+            <div class="milestone-details">
+                <h3>Delayed projects</h3>
+                 <h4>01.Kuliyapitiya (7x6) Double side Top Side Board </h4>
+                <small> - 2024-10-07 Artwork Done 
+                </small>
+               <p></p> <small> - Print Received 2024-10-10
+                </small>
+                <p></p> <small>- Final Date: Pending </small>
+                <p></p> <small>- 2024-11-27 Project Plane Given by Mr.Chaminda</small>
+                <p></p> <small>- Project Delay 51 Days</small>
+               
+            </div>
+        </div>
    
     <div class="timeline">
         <div class="milestone">
             <div class="milestone-details">
                 <h3>Job Requested</h3>
                  <h4>01.GET TOGETHER TROPHY 2024-12-13 </h4>
-                <small>All Trophy Sizes - 4  QTY - 90 </small>
-                <p></p><small>Final Date: 2024-12-10</small>
+                <small>All Trophy  | Sizes - 4  QTY - 90 </small>
+                <p></p><small>Final Date: 2024-11-10</small>
                 <h4>02.Kekirawa New Lab Open 2024-12-25 </h4>
                 <small>Main Board(16.5x4),Top Side Board (8x8),Side Sign (10x4)</small>
                 <p></p><small>Final Date: 2024-12-20</small>
