--- a/timeline.html
+++ b/timeline.html
@@ -44,7 +44,11 @@
     </style>
 </head>
 <body>
-       <div class="timeline">
+       <a href="index.html" class="back-button">← Back to Home</a>
+    <h1>Project Timeline</h1>
+    <a href="index.html" class="back-button">← Back to Home</a>
+    <h1>Project Timeline</h1>
+      <div class="timeline">
         <div class="milestone">
             <div class="milestone-details">
                 <h3>Delayed projects</h3>
@@ -59,6 +63,7 @@
                
             </div>
         </div>
+   
    
     <div class="timeline">
         <div class="milestone">
