--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
         <h1>Welcome to the WDML Advertising Project Dashboard</h1>
         <p>Board Project.</p>
     </header>
+     <a href="timeline.html" class="back-button">← Delay project</a>
     <nav>
         <button onclick="location.href='progress.html'">Projects Progress</button>
         <button onclick="location.href='timeline.html'">Progress Timeline</button>
