--- a/structure.html
+++ b/structure.html
@@ -90,7 +90,7 @@
 <body>
     <a href="index.html" class="back-button">← Back to Home</a>
     <h1>Blueprint Viewer and Printer</h1>
-    <p>View and print your uploaded blueprints.</p>
+    <p>View and print uploaded blueprints.</p>
 
     <!-- Blueprint Section -->
     <div class="blueprints">
@@ -100,6 +100,7 @@
                 <button class="action-button" onclick="printImage('./assets/hettipola.jpg')">Print</button>
                 <button class="action-button maximize-button" onclick="openModal('./assets/hettipola.jpg')">Maximize</button>
             </div>
+              <p>Hettipola Artwork</p>
         </div>
         <div class="blueprint">
             <img src="./assets/Kekirawa Main lab.jpg" alt="Kekirawa Main Lab Blueprint">
