--- a/structure.html
+++ b/structure.html
@@ -111,6 +111,16 @@
              <p>Kekirawa Board</p>
         </div>
     </div>
+     <div class="blueprint">
+            <img src="./assets/kuliyapitiya. 6x6" alt="Kekirawa Main Lab Blueprint">
+            <div class="button-container">
+                <button class="action-button" onclick="printImage('./assets/Kekirawa Main lab.jpg')">Print</button>
+                <button class="action-button maximize-button" onclick="openModal('./assets/Kekirawa Main lab.jpg')">Maximize</button>
+            </div>
+             <p>Kuliyapitiya 6x6 Board Plan</p>
+        </div>
+    </div>
+
 
     <!-- Modal for Maximized View -->
     <div id="imageModal">
