--- a/structure.html
+++ b/structure.html
@@ -94,7 +94,7 @@
 
     <!-- Blueprint Section -->
        <div class="blueprint">
-            <img src="./assets/kuliyapitiya. 6x6.jpg" alt="Kekirawa Main Lab Blueprint">
+            <img src="./assets/kuli6x6.jpg" alt="Kekirawa Main Lab Blueprint">
             <div class="button-container">
                 <button class="action-button" onclick="printImage('./assets/Kekirawa Main lab.jpg')">Print</button>
                 <button class="action-button maximize-button" onclick="openModal('./assets/Kekirawa Main lab.jpg')">Maximize</button>
