--- a/structure.html
+++ b/structure.html
@@ -96,8 +96,8 @@
        <div class="blueprint">
             <img src="./assets/kuli6x6.jpg" alt="Kekirawa Main Lab Blueprint">
             <div class="button-container">
-                <button class="action-button" onclick="printImage('./assets/Kekirawa Main lab.jpg')">Print</button>
-                <button class="action-button maximize-button" onclick="openModal('./assets/Kekirawa Main lab.jpg')">Maximize</button>
+                <button class="action-button" onclick="printImage('./assets/kuli6x6.jpg')">Print</button>
+                <button class="action-button maximize-button" onclick="openModal('./assets/kuli6x6.jpg')">Maximize</button>
             </div>
              <p>Kuliyapitiya 6x6 Board Plan</p>
         </div>
