--- a/timeline.html
+++ b/timeline.html
@@ -34,6 +34,11 @@
             background-color: #f4f4f4;
             padding: 15px;
             border-radius: 5px;
+          .delay-details {
+            background-color: #fa5555;
+            padding: 15px;
+            border-radius: 5px;
+        }
         }
         .back-button {
             display: block;
@@ -49,7 +54,7 @@
   
       <div class="timeline">
         <div class="milestone">
-            <div class="milestone-details">
+            <div class="delay-details">
                 <h3>Delayed projects</h3>
                  <h4>01.Kuliyapitiya (7x6) Double side Top Side Board </h4>
                 <small> - 2024-10-07 Artwork Done 
