--- a/timeline.html
+++ b/timeline.html
@@ -54,7 +54,7 @@
   
       <div class="timeline">
         <div class="milestone">
-            <div class="delay-details">
+            <div class="milestone-details">
                 <h3>Delayed projects</h3>
                  <h4>01.Kuliyapitiya (7x6) Double side Top Side Board </h4>
                 <small> - 2024-10-07 Artwork Done 
