--- a/timeline.html
+++ b/timeline.html
@@ -36,6 +36,12 @@
             border-radius: 5px;
     
         }
+        .dilay-details {
+            background-color: #ff6868;
+            padding: 15px;
+            border-radius: 5px;
+    
+        }
         .back-button {
             display: block;
             margin-bottom: 20px;
@@ -50,7 +56,7 @@
   
       <div class="timeline">
         <div class="milestone">
-            <div class="milestone-details">
+            <div class="dilay-details">
                 <h3>Delayed projects</h3>
                  <h4>01.Kuliyapitiya (7x6) Double side Top Side Board </h4>
                 <small> - 2024-10-07 Artwork Done 
