--- a/stock.html
+++ b/stock.html
@@ -10,8 +10,8 @@
 <body>
     <a href="index.html" class="back-button">← Back to Home</a>
     <h2>Stock Progress</h2>
-    
-    <!-- Container for Multiple Charts -->
+    <!--  
+    <!-- Container for Multiple Charts 
     <div class="chart-container">
         <div class="chart">
             <h3>Material Stock</h3>
@@ -87,7 +87,8 @@
                 }]
             }
         });
-    </script>
+    </script> 
+    -->
 
 
     <!-- Additional Chart -->
@@ -111,7 +112,7 @@
 
 
     <!-- Image -->
-    <img src="./assets/chart.png" alt="Sample Image" style="max-width: 100%; height: auto;">
+    <img src="./assets/chart.png" alt="Sample Image" style="max-width: 50%; height: auto;">
 
      
 
