--- a/stock.html
+++ b/stock.html
@@ -91,7 +91,7 @@
     -->
 
 
-    <!-- Additional Chart -->
+    <!-- Additional Chart 
     <h3>Overall Stock Levels</h3>
     <script>
         // Inventory Usage Pie Chart
@@ -109,7 +109,7 @@
     
     <canvas id="stockChart"></canvas>
 
-
+-->
 
     <!-- Image -->
     <img src="./assets/chart.png" alt="Sample Image" style="max-width: 50%; height: auto;">
