--- a/timeline.html
+++ b/timeline.html
@@ -107,10 +107,10 @@
             <div class="milestone-details">
                 <h3>Material Received</h3>
                  <h4>01.Gettogether Trophy</h4>
-                <p>Sample Trophy Submitted</p>
-                <p>Material Not Received</p>
-                <p>All necessary materials and resources acquired</p>
-                <small>Date: 2024-12-26</small>
+                <p>Trophy Material Received to Print Shop</p>
+                <p>Job not start yet</p>
+                <p>GM Not approve Material Cutting Progress </p>
+                <small>Date: 2024-11-28</small>
             </div>
         </div>
         
