--- a/gallery.html
+++ b/gallery.html
@@ -45,11 +45,19 @@
             margin-top: 20px;
         }
          }
+        /* Back Button */
         .back-button {
-            display: block;
-            margin: 20px 0;
             text-decoration: none;
-            color: #4CAF50;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+        .back-button:hover {
+            background-color: #45a049;
+        }
         }
     </style>
 </head>
@@ -61,7 +69,8 @@
     <h2>Finished Project</h2>
     <p></p>
 </header>
-<a href="index.html" class="back-button">← Back to Home</a> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Stock</title> <link rel="stylesheet" href="styles.css"> <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><canvas id="stockChart"></canvas> <script src="scripts.js"></script>
+<a href="index.html" class="back-button">← Back to Home</a>
+    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Stock</title> <link rel="stylesheet" href="styles.css"> <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><canvas id="stockChart"></canvas> <script src="scripts.js"></script>
   
 
 <div class="gallery">
