--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     /* Delay Project Button Styling */
     .delay-button {
         display: inline-block;
-        padding: 15px 25px;
+        padding: 5px 25px;
         background-color: #FF5733; /* Bright red-orange color */
         color: white;
         font-size: 18px;
@@ -43,7 +43,7 @@
     nav button {
         padding: 10px 20px;
         font-size: 16px;
-        background-color: #4CAF50;
+        background-color: #190982;
         color: white;
         border: none;
         border-radius: 5px;
