--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </header>
 
     <!-- Delay Project Button -->
-    <a href="#" class="delay-button">Delay Project</a>
+    <a href="timeline.html" class="delay-button">Delay Project</a>
 
     <!-- Navigation Buttons -->
     <nav>
