--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     .delay-button {
         display: inline-block;
         padding: 5px 25px;
-        background-color: #FF5733; /* Bright red-orange color */
+        background-color: #647ba1; /* Bright red-orange color */
         color: white;
         font-size: 18px;
         font-weight: bold;
