--- a/stock.html
+++ b/stock.html
@@ -115,22 +115,22 @@
      <tr class="available-stock">
                 <td>2024-11-28</td>
                 <td>Box Bar</td>
-                <td>80</td>
+                <td>60</td>
                 <td>0</td>
                 <td>2024-11-29</td>
                 <td>30</td>
                 <td>2x4 Frames</td>
-                <td>50</td>
+                <td>30</td>
             </tr>
             <tr class="requested-stock">
                 <td>2024-11-27</td>
                 <td>Cladding</td>
                 <td>0</td>
-                <td>0</td>
+                <td>10</td>
                 <td>-</td>
-                <td>0</td>
                 <td>-</td>
-                <td>0</td>
+                <td>-</td>
+                <td>10</td>
             </tr>
             <tr class="using-stock">
                 <td>2024-11-25</td>
@@ -142,6 +142,27 @@
                 <td>-</td>
                 <td>0</td>
             </tr>
+             <tr class="using-stock">
+                <td>2024-11-25</td>
+                <td>POP Rivert Box</td>
+                <td>0</td>
+                <td>5</td>
+                <td>2024-11-28</td>
+                <td>0</td>
+                <td>-</td>
+                <td>5</td>
+            </tr>
+              <tr class="using-stock">
+                <td>2024-11-25</td>
+                <td>Cutting Disc</td>
+                <td>0</td>
+                <td>10</td>
+                <td>2024-11-28</td>
+                <td>0</td>
+                <td>2x4 Frame</td>
+                <td>8</td>
+            </tr>
+            
         </tbody>
     </table>
 
