--- a/stock.html
+++ b/stock.html
@@ -224,10 +224,10 @@
         const stockChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk',],
+                labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
                 datasets: [{
                     label: 'Stock Levels',
-                    data: [50, 5, 5,5],
+                    data: [30, 10, 5,10,5],
                     backgroundColor: ['#DE3163', '#40E0D0', '#f0d301']
                 }]
             }
