--- a/stock.html
+++ b/stock.html
@@ -233,8 +233,8 @@
             }
         });
 
-        // Inventory Usage Pie Chart
-        new Chart(document.getElementById('inventoryUsage'), {
+    // Inventory Usage Pie Chart
+     <!--       new Chart(document.getElementById('inventoryUsage'), {
            type: 'pie',
           data: {
             labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
@@ -243,7 +243,7 @@
                    backgroundColor: ['#17a589 ', '#f39c12']
              }]
            }
-        });
+        });-->
     </script>
 
 </body>
