--- a/stock.html
+++ b/stock.html
@@ -232,13 +232,13 @@
                 }]
             }
         });
-
+  
     // Inventory Usage Pie Chart
-     <!--       new Chart(document.getElementById('inventoryUsage'), {
+    /* new Chart(document.getElementById('inventoryUsage'), {
            type: 'pie',
           data: {
             labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
-               datasets: [{
+            datasets: [{
                   data: [30, 10, 5,10,5],
                    backgroundColor: ['#17a589 ', '#f39c12']
              }]
