--- a/stock.html
+++ b/stock.html
@@ -234,7 +234,7 @@
         });
   
     // Inventory Usage Pie Chart
-    /* new Chart(document.getElementById('inventoryUsage'), {
+     new Chart(document.getElementById('inventoryUsage'), {
            type: 'pie',
           data: {
             labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
@@ -243,7 +243,7 @@
                    backgroundColor: ['#17a589 ', '#f39c12']
              }]
            }
-        });-->
+        });
     </script>
 
 </body>
