--- a/stock.html
+++ b/stock.html
@@ -234,16 +234,16 @@
         });
   
     // Inventory Usage Pie Chart
-     new Chart(document.getElementById('inventoryUsage'), {
-           type: 'pie',
-          data: {
-            labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
-            datasets: [{
-                  data: [30, 10, 5,10,5],
-                   backgroundColor: ['#17a589 ', '#f39c12']
-             }]
-           }
-        });
+    // new Chart(document.getElementById('inventoryUsage'), {
+        //   type: 'pie',
+         // data: {
+        //    labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
+        //    datasets: [{
+          //        data: [30, 10, 5,10,5],
+            //       backgroundColor: ['#17a589 ', '#f39c12']
+          //   }]
+        //   }
+       // });
     </script>
 
 </body>
