--- a/stock.html
+++ b/stock.html
@@ -162,7 +162,66 @@
                 <td>2x4 Frame</td>
                 <td>8</td>
             </tr>
-            
+            <tr class="using-stock">
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+              <tr class="using-stock">
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+              <tr class="using-stock">
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+              <tr class="using-stock">
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+              <tr class="using-stock">
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+              <tr class="using-stock">
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
         </tbody>
     </table>
 
