--- a/stock.html
+++ b/stock.html
@@ -163,7 +163,17 @@
                 <td>8</td>
             </tr>
             <tr class="using-stock">
+                <td>Welding Rods</td>
                 <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+              <tr class="using-stock">
+                <td>GI Pipe</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -183,17 +193,7 @@
                 <td>-</td>
             </tr>
               <tr class="using-stock">
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
-              <tr class="using-stock">
-                <td>-</td>
+                <td>QD Paint</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -203,7 +203,7 @@
                 <td>-</td>
             </tr>
               <tr class="using-stock">
-                <td>-</td>
+                <td>Screw Nails</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -213,7 +213,7 @@
                 <td>-</td>
             </tr>
               <tr class="using-stock">
-                <td>-</td>
+                <td>Soft Glue</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
