--- a/progress.html
+++ b/progress.html
@@ -64,7 +64,7 @@
               <tr>
                 <td>Gettogethr Trophy</td>
                 <td>Confirm</td>
-                <td>No Material</td>
+                <td>Working Bigine 01-12</td>
                 <td>2024-12-10</td>
             </tr>
             <tr>
