--- a/stock.html
+++ b/stock.html
@@ -183,7 +183,7 @@
                 <td>-</td>
             </tr>
               <tr class="using-stock">
-                <td>-</td>
+                <td>Grinding Disc</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
