--- a/stock.html
+++ b/stock.html
@@ -283,7 +283,7 @@
         const stockChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
+                labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert','Welding Rods','GI Pipe','Grinding Disc','QD Paint','Screw Nails','Soft Glue'],
                 datasets: [{
                     label: 'Stock Levels',
                     data: [30, 10, 5,10,5],
