--- a/stock.html
+++ b/stock.html
@@ -105,6 +105,8 @@
                 <th onclick="sortTable(2)">Qty <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(0)">Request Date <span class="sort-icon">&#9660;</span></th>
                  <th onclick="sortTable(3)">Request Qty <span class="sort-icon">&#9660;</span></th>
+                <th onclick="sortTable(3)">Received Date <span class="sort-icon">&#9660;</span></th>
+                <th onclick="sortTable(3)">Received Qty <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(4)">Use Date <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(5)">Using Qty <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(6)">Description <span class="sort-icon">&#9660;</span></th>
