--- a/stock.html
+++ b/stock.html
@@ -89,6 +89,13 @@
         .back-button:hover {
             background-color: #45a049;
         }
+        
+        /* Canvas for Bar Chart */
+        #stockChart {
+            width: 100%;
+            height: 400px;
+            margin: 30px 0;
+        }
     </style>
 </head>
 <body>
@@ -104,7 +111,7 @@
                 <th onclick="sortTable(1)">Item <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(2)">Qty <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(0)">Request Date <span class="sort-icon">&#9660;</span></th>
-                 <th onclick="sortTable(3)">Request Qty <span class="sort-icon">&#9660;</span></th>
+                <th onclick="sortTable(3)">Request Qty <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(3)">Received Date <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(3)">Received Qty <span class="sort-icon">&#9660;</span></th>
                 <th onclick="sortTable(4)">Use Date <span class="sort-icon">&#9660;</span></th>
@@ -114,7 +121,7 @@
             </tr>
         </thead>
         <tbody>
-     <tr class="available-stock">
+            <tr class="available-stock">
                 <td>Box Bar</td>
                 <td>60</td>
                 <td>2024-11-28</td>
@@ -131,8 +138,8 @@
                 <td>0</td>
                 <td>2024-11-27</td>
                 <td>10</td>
-                 <td>-</td>
-                 <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -143,32 +150,32 @@
                 <td>0</td>
                 <td>2024-11-25</td>
                 <td>0</td>
-                 <td>-</td>
-                 <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>0</td>
                 <td>-</td>
                 <td>0</td>
             </tr>
-             <tr class="using-stock">
+            <tr class="using-stock">
                 <td>POP Rivert Box</td>
                 <td>0</td>
-                 <td>2024-11-25</td>
-                 <td>5</td>
+                <td>2024-11-25</td>
+                <td>5</td>
                 <td>2024-11-28</td>
                 <td>0</td>
-                  <td>-</td>
-                  <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>5</td>
             </tr>
-              <tr class="using-stock">
+            <tr class="using-stock">
                 <td>Cutting Disc</td>
                 <td>0</td>
                 <td>2024-11-25</td>
                 <td>10</td>
-                   <td>-</td>
-                   <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>2024-11-28</td>
                 <td>0</td>
                 <td>2x4 Frame</td>
@@ -179,69 +186,69 @@
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
-                 <td>-</td>
-                 <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
             </tr>
-              <tr class="using-stock">
+            <tr class="using-stock">
                 <td>GI Pipe</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
-                   <td>-</td>
-                   <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
             </tr>
-              <tr class="using-stock">
+            <tr class="using-stock">
                 <td>Grinding Disc</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
-                   <td>-</td>
-                   <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
             </tr>
-              <tr class="using-stock">
+            <tr class="using-stock">
                 <td>QD Paint</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
-                   <td>-</td>
-                   <td>-</td>
-                 <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
             </tr>
-              <tr class="using-stock">
+            <tr class="using-stock">
                 <td>Screw Nails</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
-                   <td>-</td>
-                   <td>-</td>
-                 <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
             </tr>
-              <tr class="using-stock">
+            <tr class="using-stock">
                 <td>Soft Glue</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
-                   <td>-</td>
-                   <td>-</td>
-                 <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -249,13 +256,16 @@
         </tbody>
     </table>
 
+    <!-- Chart Canvas -->
+    <canvas id="stockChart"></canvas>
+
     <script>
         // JavaScript for Sorting the Table
         function sortTable(n) {
             const table = document.getElementById("stockTable");
             let rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
             switching = true;
-            dir = "asc"; // Set the sorting direction to ascending initially
+            dir = "asc";
             while (switching) {
                 switching = false;
                 rows = table.rows;
@@ -268,7 +278,7 @@
                             shouldSwitch = true;
                             break;
                         }
-                    } else if (dir == "desc") {
+                    } else if (dir === "desc") {
                         if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
                             shouldSwitch = true;
                             break;
@@ -280,53 +290,62 @@
                     switching = true;
                     switchcount++;
                 } else {
-                    if (switchcount == 0 && dir == "asc") {
+                    if (switchcount === 0 && dir === "asc") {
                         dir = "desc";
                         switching = true;
                     }
                 }
             }
         }
-    </script>
 
-    <!-- Material Stock and Inventory Usage Charts -->
-    <div class="chart-container">
-        <div class="chart">
-            <h3>Material Stock</h3>
-            <canvas id="stockChart"></canvas>
-        </div>
-        <div class="chart">
-            <h3>Inventory Usage</h3>
-            <canvas id="inventoryUsage"></canvas>
-        </div>
-    </div>
+        // Material Stock Bar Chart (Horizontal)
+        const labels = ['Box Bar', 'Cladding', 'Plastic', 'Cutting Disc', 'POP Rivert', 'Welding Rods', 'GI Pipe', 'Grinding Disc', 'QD Paint', 'Screw Nails', 'Soft Glue'];
+        const stockData = [30, 10, 5, 10, 5, 0, 0, 0, 0, 0, 0]; // quantities
 
-    <script>
-        // Material Stock Bar Chart
+        // Combine labels and stock data into an array of objects
+        const data = labels.map((label, index) => ({
+            label: label,
+            stock: stockData[index]
+        }));
+
+        // Sort data by stock in descending order
+        data.sort((a, b) => b.stock - a.stock);
+
+        // Now separate the sorted data back into labels and values
+        const sortedLabels = data.map(item => item.label);
+        const sortedStockData = data.map(item => item.stock);
+
+        // Horizontal bar chart configuration with sorted data
         const ctx = document.getElementById('stockChart').getContext('2d');
         const stockChart = new Chart(ctx, {
-            type: 'bar',
+            type: 'bar', // horizontal bar chart
             data: {
-                labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert','Welding Rods','GI Pipe','Grinding Disc','QD Paint','Screw Nails','Soft Glue'],
+                labels: sortedLabels, // use sorted labels
                 datasets: [{
                     label: 'Stock Levels',
-                    data: [30, 10, 5,10,5],
-                    backgroundColor: ['#DE3163', '#40E0D0', '#f0d301']
+                    data: sortedStockData, // use sorted stock data
+                    backgroundColor: ['#DE3163', '#40E0D0', '#f0d301', '#9b59b6', '#16a085', '#2ecc71', '#f39c12', '#e74c3c', '#3498db', '#f1c40f', '#9b59b6'],
                 }]
+            },
+            options: {
+                indexAxis: 'y', // Makes the bars horizontal
+                scales: {
+                    x: {
+                        beginAtZero: true, // Ensure the x-axis starts at 0
+                        title: {
+                            display: true,
+                            text: 'Quantity'
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: 'Material'
+                        }
+                    }
+                }
             }
         });
-  
-    // Inventory Usage Pie Chart
-    // new Chart(document.getElementById('inventoryUsage'), {
-        //   type: 'pie',
-         // data: {
-        //    labels: ['Box Bar', 'Cladding', 'Plastic','Cutting Disk','POP Rivert'],
-        //    datasets: [{
-          //        data: [30, 10, 5,10,5],
-            //       backgroundColor: ['#17a589 ', '#f39c12']
-          //   }]
-        //   }
-       // });
     </script>
 
 </body>
